index wallpaper change check to fix nav not showing on mobile

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background-image: url("/Images/Blue_book.png");
+    background-image: url("/Images/Wall-11.jpeg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;  
